fix defocus contrast inversion example file for sphinx path mangling during build

--- a/docs/source/examples/Defocus and Contrast Inversion.ipynb
+++ b/docs/source/examples/Defocus and Contrast Inversion.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
     "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(10,10), dpi=72)  # ~720p\n",
     "axs = axs.ravel()\n",
     "ani = animation.FuncAnimation(fig, plot_loop, frames=100, repeat=True)\n",
-    "ani.save('defocus-contrast-inversion.mp4')\n",
+    "ani.save('../_static/defocus-contrast-inversion.mp4')\n",
     "plt.close(fig)"
    ]
   },
@@ -101,28 +101,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"defocus-contrast-inversion.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "Video('defocus-contrast-inversion.mp4')"
+    "<video src=\"../_static/defocus-contrast-inversion.mp4\" controls>alternative text</video>"
    ]
   },
   {
