rework interferogram docs, re-introduce PSD power law plotting

--- a/docs/source/user_guide/Interferograms.ipynb
+++ b/docs/source/user_guide/Interferograms.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Interferograms\n",
     "\n",
-    "Prysm offers rich features for analysis of interferometric data. Interferogram objects are conceptually similar to [Pupils](./Pupils.ipynb) and both inherit from the same base class, as they both have to do with optical phase. The construction of an `Interferogram` requires only a few parameters:"
+    "Prysm offers rich features for analysis of interferometric data. Interferogram objects are conceptually similar to [Pupils](./Pupils.ipynb) and both inherit from the same base class, as they both have to do with optical phase. We begin by performing a few imports:"
    ]
   },
   {
@@ -16,35 +16,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from prysm import Interferogram\n",
-    "x = y = np.arange(129)\n",
-    "z = np.random.uniform((128,128))\n",
-    "interf = Interferogram(phase=z, intensity=None, x=x, y=y, scale='mm', phase_unit='nm', meta={'wavelength': 632.8e-9})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notable are the scale, and phase unit, which define the x, y, and z units. Any SI unit is accepted as well as angstroms. Imperial units not accepted. meta is a dictionary to store metadata. For several interferogram methods to work, the wavelength must be present in meters. This departure from `prysm`’s convention of preferred units is used to maintain compatability with Zygo dat files. Interferograms are usually created from such files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from prysm import sample_files\n",
+    "from prysm import Interferogram, sample_files\n",
     "\n",
-    "interf = Interferogram.from_zygo_dat(sample_files('dat'))"
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and both the dat and datx format from Zygo are supported. Dat carries no dependencies, while datx requries the installation of `h5py`. In addition to properties inherited from the OpticalPhase class (`pv`, `rms`, `Sa`, `std`), Interferograms have a `PVr` property, for C. Evan's Robust PV metric, and `dropout_percentage` property, which gives the percentage of NaN values within the phase array. These NaNs may be filled,"
+    "The construction of an `Interferogram` requires only a few parameters:"
    ]
   },
   {
@@ -53,7 +35,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interf.fill(_with=0)"
+    "x = y = np.arange(129)\n",
+    "z = np.random.rand(128, 128)\n",
+    "interf = Interferogram(phase=z, intensity=None, x=x, y=y, meta=dict(), units=None, labels=None)\n",
+    "\n",
+    "interf.plot2d()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`units` and `labels` have default values of `None` and control the units the data is in as well as the labels used for plotting.  For more information, see the documentation on [units and labels](./units-and-labels.html) meta is a dictionary to store metadata. Interferograms are usually created from Zygo dat files.  One is provided as a sample file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interf = Interferogram.from_zygo_dat(sample_files('dat'))\n",
+    "interf.plot2d()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and both the dat and datx format from Zygo are supported. Dat carries no dependencies, while datx requries the installation of `h5py`. In addition to properties inherited from the OpticalPhase class (`pv`, `rms`, `Sa`, `std`), Interferograms have a `PVr` property, for [C. Evan's Robust PV metric](https://www.spiedigitallibrary.org/journals/Optical-Engineering/volume-48/issue-4/043605/PVr-a-robust-amplitude-parameter-for-optical-surface-specification/10.1117/1.3119307.short?SSO=1), and `dropout_percentage` property, which gives the percentage of NaN values within the phase array. These NaNs may be filled,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interf.fill(_with=0)\n",
+    "interf.plot2d()"
    ]
   },
   {
@@ -69,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# no plot here - the sample file already has this processing done\n",
     "interf.remove_piston().remove_tiptilt().remove_power()"
    ]
   },
@@ -102,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interf.spike_clip(nsigma=3)  # default is 3"
+    "interf.spike_clip(nsigma=3)  # default is 3\n",
+    "interf.plot2d()"
    ]
   },
   {
@@ -111,7 +133,7 @@
    "source": [
     "setting points with a value more than nsigma standard deviations from the mean to NaN.\n",
     "\n",
-    "If the data did not have a lateral calibration baked into it, you can provide one in `prysm`,"
+    "Lateral calibrations can be stripped and applied:"
    ]
   },
   {
@@ -121,6 +143,7 @@
    "outputs": [],
    "source": [
     "# this is not going to do what you want if your data is already calibrated.\n",
+    "interf.strip_latcal()\n",
     "interf.latcal(plate_scale=0.1, unit='mm')"
    ]
   },
@@ -139,14 +162,15 @@
    "source": [
     "your_mask = np.ones(interf.phase.shape)\n",
     "interf.mask(your_mask)\n",
-    "interf.mask('circle', diameter=4)  # 4 <spatial_unit> diameter circle"
+    "interf.mask('circle', diameter=30)  # 30 interf.units.x diameter circle\n",
+    "interf.plot2d()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The truecircle mask should not be used on interferometric data. the phase is deleted (replaced with NaN) wherever the mask is equal to zero.\n",
+    "The `truecircle` mask should not be used on interferometric data. the phase is deleted (replaced with NaN) wherever the mask is equal to zero.\n",
     "\n",
     "Interferograms may be cropped, deleting empty (NaN) regions around a measurment;"
    ]
@@ -158,6 +182,23 @@
    "outputs": [],
    "source": [
     "interf.crop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or padded,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interf.pad(3)  # this works out to a 10% of diameter on each side pad\n",
+    "interf.plot2d()"
    ]
   },
   {
@@ -192,14 +233,21 @@
    "outputs": [],
    "source": [
     "interf.crop().remove_piston_tiptilt_power().fill()\n",
-    "ux, uy, psd = interf.psd()"
+    "psd = interf.psd()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "several slices are also available,"
+    "The psd variable is a `PSD` (`RichData`) object, so it can be used as any other, e.g. for [slicing](./slicing.html) or plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When plotting PSD slices, power law models can be overlain:"
    ]
   },
   {
@@ -208,17 +256,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psd_dict = interf.psd_slices(x=True, y=True, azavg=True, azmin=True, azmax=True)\n",
-    "ux, psd_x = psd_dict['x']\n",
-    "uy, psd_y = psd_dict['y']\n",
-    "ur, psd_r = psd_dict['azavg']"
+    "from prysm.plotting import add_psd_model\n",
+    "\n",
+    "# a, b, and c given => abc model\n",
+    "fig, ax = psd.slices().plot('azavg', invert_x=True, ylim=(1e-4, 1e4))\n",
+    "fig, ax = add_psd_model(psd, fig=fig, ax=ax, invert_x=True,\n",
+    "                        lw=3, ls='--', color='r', alpha=0.6,\n",
+    "                        a=3e3, b=2/10, c=4)\n",
+    "\n",
+    "# a, b given => ab model\n",
+    "fig, ax = add_psd_model(psd, fig=fig, ax=ax, invert_x=True,\n",
+    "                        color='g', alpha=0.6, lw=2, ls=':',\n",
+    "                        a=1, b=3.5)\n",
+    "\n",
+    "# you can also pass in your own model via the `psd_fcn` keyword argument.\n",
+    "# Its signature should look like:\n",
+    "def your_own_psd_fcn(nu, **kwargs):\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the PSD may be plotted,"
+    "(slices of) the PSD can be fit to these analytic functions:"
    ]
   },
   {
@@ -227,25 +288,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interf.plot_psd2d(axlim=1, interp_method='lanczos', fig=None, ax=None)\n",
-    "interf.plot_psd_slices(xlim=(1e0,1e3), ylim=(1e-7,1e2), fig=None, ax=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For the slices plot, a Lorentzian or power law model may be plotted alongside the data for e.g. visual verification of a requirement:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interf.plot_psd_slices(a=1,b=2,c=3)\n",
-    "interf.plot_psd_slices(a=1,b=1.5)"
+    "from prysm.interferogram import fit_psd\n",
+    "\n",
+    "a, b, c = fit_psd(*psd.slices().azavg, guess=(2e3, 2/10, 3.75))\n",
+    "\n",
+    "print(a, b, c)\n",
+    "\n",
+    "fig, ax = psd.slices().plot('azavg', invert_x=True, ylim=(1e-4, 1e4))\n",
+    "fig, ax = add_psd_model(psd, fig=fig, ax=ax, invert_x=True, a=a, b=b, c=c, alpha=0.5)"
    ]
   },
   {
@@ -270,15 +320,6 @@
    "source": [
     "only one of wavelength (wl; spatial period) or frequency (f) should be provided. f will clobber wavelength."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "interf.plot2d()"
-   ]
   }
  ],
  "metadata": {
@@ -297,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
