add plotting and slicing note to end of interferogram docs

--- a/docs/source/user_guide/Interferograms.ipynb
+++ b/docs/source/user_guide/Interferograms.ipynb
@@ -320,6 +320,13 @@
    "source": [
     "only one of wavelength (wl; spatial period) or frequency (f) should be provided. f will clobber wavelength."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For details on plotting or slicing interferograms, see [plotting](./plotting.html) and [slicing](./slicing.html)"
+   ]
   }
  ],
  "metadata": {
