--- a/docs/source/releases/v0.17.rst
+++ b/docs/source/releases/v0.17.rst
@@ -16,6 +16,7 @@ Note that this list is in logical order of dependence, not in order of importanc
 * * :func:`~prysm.zernike.n_m_to_fringe` to convert (n, m) radial and azimuthal orders to fringe indices.
 * * :func:`~prysm.zernike.n_m_to_ansi_j` to convert (n, m) radial and azimuthal orders to ANSI single-term indices.
 * * :func:`~prysm.zernike.ansi_j_to_n_m` to perform the reverse of :code:`n_m_to_ansi_j`.
+* * :func:`~prysm.zernike.noll_to_n_m` to perform Noll to (n, m) radial and azimuthal indices.
 * * :func:`~prysm.zernike.zero_separation` to calculate the zero separation, in fractions of 1, for example :code:`1 / zero_separation(4)` returns 16, indicating 16 samples per radius are needed to Nyquist sample the 4th radial order Zernike polynomial (Primary Spherical).
 * Recursively generated Zernike polynomials:
 * * :class:`ANSI2TermZernike` for ANSI Zernikes with (n, m) indices.  See The 2D-Q note below for how these coefficients are entered.
@@ -51,14 +52,14 @@ Note that this list is in logical order of dependence, not in order of importanc
 * * * :code:`(obj).exact_xy` for 2D sampling on (x, y)
 * * * :code:`(obj).exact_polar` for 2D sampling on (r, p)
 * Units rewrite:
-* * prysm now utilizes / understands !!! LINK HERE !!! astropy.units for all calculations using the object-oriented API.  :class:`BasicData` has become :class:`RichData` with a new :code:`units=` kwarg.  If this is :code:`None`, the instance will adopt :code:(class).default_units`.  These default units mimic the behavior of prysm < 0.17, so users not adjusting units will feel no change.  To use custom units, the :code:`wavelength`, :code:`spatial_unit`, and :code:`phase_unit` arguments are no more, and should be generated loosely as follows:
+* * prysm now utilizes / understands `astropy.units <https://docs.astropy.org/en/stable/units/>`_  for all calculations using the object-oriented API.  :class:`BasicData` has become :class:`RichData` with a new :code:`units=` kwarg.  If this is :code:`None`, the instance will adopt :code:(class).default_units`.  These default units mimic the behavior of prysm < 0.17, so users not adjusting units will feel no change.  To use custom units, the :code:`wavelength`, :code:`spatial_unit`, and :code:`phase_unit` arguments are no more, and should be generated loosely as follows:
 
 >>> from prysm import Units, Pupil, mkwvl
 >>> from astropy import units as u
 >>> unit_pack = Units(x = u.mm, z = u.nm, wavelength=mkwvl(632.8, u.nm))
 >>> pu = Pupil(..., units=unit_pack)
 
-* * Note that the Pupil class is used only for example, and the units kwarg is nearly universal.  For more information, see the !!! LINK HERE !!! units documentation.
+* * Note that the Pupil class is used only for example, and the units kwarg is nearly universal.  For more information, see the `units documentation <../user_guide/units-and-labels.html>_.
 * Labels rewrite:
 * * prysm now has a labels system that mimics the units system.  The constructor works loosely as follows:
 
@@ -66,7 +67,7 @@ Note that this list is in logical order of dependence, not in order of importanc
 >>> lab = Labels(xybase='Pupil', z='OPD', xy_additions=['X', 'Y'])
 >>> pu = Pupil(labels=lab)
 
-* * Note that the Pupil class is used only for example, and the labels kwarg is nearly universal.  For more information, see the !!! LINK HERE !!! labels documentation.
+* * Note that the Pupil class is used only for example, and the labels kwarg is nearly universal.  For more information, see the `labels documentation <../user_guide/units-and-labels.html>_.
 * Plotting rewrite:
 * * Over time, plotting in prysm has grown fragmented, with minor variations on the same theme throughout the classes.  To reduce the cognitive overhead for users, plotting has been made universal with a single :code:`plot2d` and :code:`(obj).slices().plot` implementaiton.  This means that nearly all prysm classes can be plotted with exactly the same grammar.
 
