fix examples for API >= v0.17

--- a/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
+++ b/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We point prysm to the file, create a new interferogram, mask it to a circular region 100 mm across, subtract piston, tip/tilt and power, and evalute the PV and RMS wavefront error. We also plot the wavefront to make sure all has gone well"
+    "We point prysm to the file, create a new interferogram, mask it to a circular region 100 mm across, subtract piston, tip/tilt and power, and evalute the PV and RMS wavefront error. We also plot the wavefront."
    ]
   },
   {
@@ -39,7 +39,7 @@
     "i.crop().mask('circle', 40).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
     "print(i.pv, i.rms)\n",
-    "i.plot2d(clim=100, interp_method='bilinear')  # +/- 100 nm\n",
+    "i.plot2d(clim=100, interpolation='bilinear')  # +/- 100 nm\n",
     "plt.grid(False)"
    ]
   },
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i.change_phase_unit('waves')\n",
+    "i.change_z_unit('waves')\n",
     "1/i.pv, 1/i.rms  # print reciprocal -- \"one over xxx waves\""
    ]
   },
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i.change_phase_unit('nm')\n",
+    "i.change_z_unit('nm')\n",
     "i.fill()\n",
     "i.bandlimited_rms(1,10)"
    ]
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This value is derived from the PSD, so you must call fill first. Do not worry about the corners of the array containing data - it will be windowed out. If you do this on a part which has a central obscuration, the result will be incorrect. Otherwise, the value tends to agree to within +/- 5% of Zygo’s Mx ® software, though the authors of prysm do not believe they are calculated at all the same way.\n",
+    "This value is derived from the PSD, so you must call fill first. Do not worry about the corners of the array containing data - it will be windowed out. If you do this on a part which has a central obscuration or otherwise departs from being a circle or rectangle, the result will be correct.\n",
     "\n",
     "If you wish to decompose the wavefront into Zernike polynomials, that is easy enough."
    ]
@@ -95,8 +95,8 @@
    "source": [
     "# do this on data which has not been filled to avoid errors introduced by the fill value.\n",
     "coefficients = zernikefit(i.phase, terms=36, norm=True, map_='fringe')\n",
-    "fz = FringeZernike(coefficients, dia=i.diameter, opd_unit=i.phase_unit, norm=True)\n",
-    "fz"
+    "fz = FringeZernike(coefficients, dia=i.diameter, units=i.units, norm=True)\n",
+    "print(fz)"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The sample data has a ciruclar clear aperture, but if it had a central obscuration (such as transmitted wavefront data for a telescope) that would be easy to mask too.  PSD, and by extension bandlimited RMS values for data with annular support will be nonsensical."
+    "The sample data has a circular clear aperture, but if it had a central obscuration (such as transmitted wavefront data for a telescope) that would be easy to mask too.  Here we will build a composite mask for the data as if it were a telescope with an annual aperture disrupted by a spider:"
    ]
   },
   {
@@ -144,7 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i.mask('invertedcircle', 7)\n",
+    "from prysm.geometry import circle, inverted_circle, generate_spider\n",
+    "\n",
+    "outer = circle(i.samples_x, radius=1) # radius has units of array semidiameter\n",
+    "inner = inverted_circle(i.samples_x, radius=0.35)\n",
+    "\n",
+    "# width has units of arydiam, or pixels if arydiam=None\n",
+    "spider = generate_spider(vanes=3, width=0.5, rotation=90, arydiam=i.diameter, samples=i.samples_x)\n",
+    "mask = outer * inner * spider\n",
+    "\n",
+    "i.mask(mask)\n",
     "i.plot2d(clim=100)  # +/- 100 nm\n",
     "plt.grid(False)"
    ]
@@ -173,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
