--- a/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
+++ b/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "# do this on data which has not been filled to avoid errors introduced by the fill value.\n",
     "coefficients = zernikefit(i.phase, terms=36, norm=True, map_='fringe')\n",
-    "fz = FringeZernike(coefficients, dia=i.diameter, units=i.units, norm=True)\n",
+    "fz = FringeZernike(coefficients, dia=i.diameter, z_unit=i.z_unit, norm=True)\n",
     "print(fz)"
    ]
   },
@@ -157,13 +157,6 @@
     "i.plot2d(clim=100)  # +/- 100 nm\n",
     "plt.grid(False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -182,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
