update diffraction limited MTF / PSF example to modern slice syntax

--- a/docs/source/examples/Diffraction Limited PSF and MTF.ipynb
+++ b/docs/source/examples/Diffraction Limited PSF and MTF.ipynb
@@ -38,22 +38,17 @@
     "fno = efl / epd\n",
     "wavelength = 0.5\n",
     "\n",
-    "# mask_target is just a performance optimization\n",
-    "# more samples makes for more accuracy.\n",
-    "# The below would get you amost the same answer:\n",
-    "# p = Pupil(wavelength=wavelength, dia=epd)\n",
-    "\n",
-    "p = Pupil(wavelength=wavelength, dia=epd, mask_target='fcn', samples=256)\n",
+    "p = Pupil(wavelength=wavelength, dia=epd, samples=256)\n",
     "psf = PSF.from_pupil(p, efl)\n",
-    "u, sx = psf.slice_x\n",
+    "u, sx = psf.slices().x\n",
     "\n",
     "# calculate the analytical version, and the difference between the two\n",
     "analytical_psf = airydisk(u, fno, wavelength)\n",
     "psferr = (analytical_psf - sx)\n",
     "\n",
     "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(10,4))\n",
-    "psf.plot_slice_xy(fig=fig, ax=ax1, axlim=50)\n",
-    "ax1.plot(u, analytical_psf, ls=':', c='k', label='Analytic')\n",
+    "psf.slices().plot('x', fig=fig, ax=ax1, xlim=50)\n",
+    "ax1.plot(u, analytical_psf, ls=':', c='k', label='Analytic', zorder=3)\n",
     "ax1.legend()\n",
     "ax2.plot(u, psferr, lw=3)\n",
     "ax2.set(xlim=(-50,50), xlabel=r'Image Plane X [$\\mu m$]', ylabel='Intensity Difference an - numerical')\n",
@@ -95,13 +90,13 @@
    "source": [
     "# calculate the MTF and its error\n",
     "mtf = MTF.from_psf(psf)\n",
-    "nu, m = mtf.tan\n",
+    "nu, m = mtf.slices().x\n",
     "m_analytic = diffraction_limited_mtf(fno, wavelength, frequencies=nu)\n",
     "mtferr = (m_analytic - m)\n",
     "\n",
     "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(10,4))\n",
-    "mtf.plot_tan_sag(fig=fig, ax=ax1)\n",
-    "ax1.plot(nu, m_analytic, ls=':', c='k', label='Analytic')\n",
+    "mtf.slices().plot('x', fig=fig, ax=ax1)\n",
+    "ax1.plot(nu, m_analytic, ls=':', c='k', label='Analytic', zorder=3)\n",
     "ax1.legend()\n",
     "ax2.plot(nu, mtferr, lw=3)\n",
     "ax2.set(xlim=(0,200), ylim=(-0.0005,0.0005), xlabel='Spatial Frequency [cy/mm]', ylabel='MTF Difference [a.u.]')\n",
@@ -141,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
