update ATF example to modern slicing syntax

--- a/docs/source/examples/Numerically Calculated Aberration Transfer Function.ipynb
+++ b/docs/source/examples/Numerically Calculated Aberration Transfer Function.ipynb
@@ -83,11 +83,11 @@
     "    real_mtfs = []\n",
     "    for Wrms in Wrms_vals:\n",
     "        kwarg[f'Z{mode_index}'] = Wrms\n",
-    "        pupil = FringeZernike(**kwarg, norm=True, opd_unit='waves')  # waves is the default, not really needed\n",
+    "        pupil = FringeZernike(**kwarg, norm=True, z_unit='waves')  # waves is the default, not really needed\n",
     "        psf = PSF.from_pupil(pupil, efl=2)  # normalized frequency makes this choice arbitrary\n",
     "        mtf = MTF.from_psf(psf)\n",
     "        \n",
-    "        u, mtf_ = mtf.tan\n",
+    "        u, mtf_ = mtf.slices().x\n",
     "        real_mtfs.append(mtf_)\n",
     "    \n",
     "    cutoff = 1 / (psf.wavelength * psf.fno) * 1e3 # 1e3 is cy/um => cy/mm\n",
@@ -166,11 +166,11 @@
    "outputs": [],
    "source": [
     "# most of this code is just copy pasted from above\n",
-    "pupil = FringeZernike(Z9=0.1, norm=True, opd_unit='waves')  # waves is the default, not really needed\n",
+    "pupil = FringeZernike(Z9=0.1, norm=True, z_unit='waves')  # waves is the default, not really needed\n",
     "psf = PSF.from_pupil(pupil, efl=2)  # normalized frequency makes this choice arbitrary\n",
     "mtf = MTF.from_psf(psf)\n",
     "\n",
-    "u, mtf_ = mtf.tan\n",
+    "u, mtf_ = mtf.slices().x\n",
     "\n",
     "diffraction_limit = diffraction_limited_mtf(psf.fno, psf.wavelength, frequencies=u)\n",
     "\n",
@@ -185,7 +185,7 @@
     "ax.legend(title='Method')\n",
     "ax.set(xlim=(0,1), xlabel='Normalized Spatial Frequency',\n",
     "       ylim=(0,1), ylabel='ATF',\n",
-    "       title=r'Z9, RMS WFE = 0.1 $\\lambda$')"
+    "       title=r'Z9, RMS WFE = 0.1 $\\lambda$');"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "    pupil = FringeZernike()\n",
     "    psf = PSF.from_pupil(pupil, efl=2)\n",
     "    mtf = MTF.from_psf(psf)\n",
-    "    u, t = mtf.tan\n",
+    "    u, t = mtf.slices().x\n",
     "    \n",
     "    diffraction_limit = diffraction_limited_mtf(psf.fno, psf.wavelength, frequencies=u)\n",
     "    cutoff = 1 / (psf.wavelength * psf.fno) * 1e3\n",
@@ -221,12 +221,12 @@
     "    for i in idxs:\n",
     "        kwarg = {}\n",
     "        kwarg[f'Z{i}'] = rms_wfe\n",
-    "        pupil = FringeZernike(**kwarg, norm=True, opd_unit='waves')  # waves is the default, not really needed\n",
+    "        pupil = FringeZernike(**kwarg, norm=True, z_unit='waves')  # waves is the default, not really needed\n",
     "        psf = PSF.from_pupil(pupil, efl=2)  # normalized frequency makes this choice arbitrary\n",
     "        mtf = MTF.from_psf(psf)\n",
     "        \n",
     "        cutoff = 1 / (psf.wavelength * psf.fno) * 1e3 # 1e3 is cy/um => cy/mm\n",
-    "        u, mtf_ = mtf.tan\n",
+    "        u, mtf_ = mtf.slices().x\n",
     "        \n",
     "        atf = mtf_ / diffraction_limit\n",
     "        difference = abs(shannon[:-10] - atf[:-10])  # erode a little more of the end here for high order cases\n",
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
