update onion ring bokeh to modern plot2d syntax

--- a/docs/source/examples/Onion Ring Bokeh.ipynb
+++ b/docs/source/examples/Onion Ring Bokeh.ipynb
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "\n",
     "from prysm import NollZernike, PSF\n",
+    "from prysm.coordinates import make_rho_phi_grid\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
@@ -36,11 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pupil = NollZernike(Z4=25/1.5, samples=384, dia=25)  # 100 waves PV of defocus, 25mm for F/2\n",
-    "pupil._gengrid()  # generate the (normalized coordinate) grid, stored in pupil.rho, pupil.phi\n",
+    "pupil = NollZernike(Z4=25/1.5, samples=384, dia=25, z_unit='waves')  # 100 waves PV of defocus, 25mm for F/2\n",
     "\n",
-    "ps = PSF.from_pupil(pupil, efl=50, Q=1.25)\n",
-    "ps.plot2d(axlim=200, power=3)"
+    "ps = PSF.from_pupil(pupil, efl=50, Q=1)\n",
+    "ps.plot2d(xlim=200, power=1/3)"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "source": [
     "The ripples are Fresnel rings and are a consequence interference very similar to the [Gibbs phenomenon](https://en.wikipedia.org/wiki/Gibbs_phenomenon).  They disappear the farther out of focus you go, and can be wiped away by coarser sampling with an image sensor, or significantly polychromatic light.\n",
     "\n",
-    "We used a value of Q below 2 (worse than Nyquist sampled) because the image is so out of focus, it largely lacks high frequency detail to be aliased, so the choice of Q has minimal consequence.\n",
+    "We used a value of Q below 2 (worse than Nyquist sampled) because the image is so out of focus, it largely lacks high spatial frequency content to be aliased, so the choice of Q has minimal consequence.\n",
     "\n",
     "What if the pupil had some ripples in it from structured errors on optical surfaces in the system?"
    ]
@@ -62,13 +62,15 @@
    "source": [
     "pupil2 = pupil.copy()\n",
     "\n",
+    "rho, _ = make_rho_phi_grid(samples_x=pupil.samples_x)\n",
+    "\n",
     "# 15 cycles per aperture, lambda/25 RMS amplitude\n",
     "const = 2 * np.pi * 15\n",
-    "phase_mod = np.sin(pupil.rho * const) * (np.sqrt(2) / 25)\n",
+    "phase_mod = np.sin(rho * const) * (np.sqrt(2) / 25)\n",
     "pupil2.phase += phase_mod\n",
     "\n",
-    "ps = PSF.from_pupil(pupil2, efl=50, Q=1.25)  \n",
-    "ps.plot2d(axlim=200, power=3)"
+    "ps = PSF.from_pupil(pupil2, efl=50, Q=1)  \n",
+    "ps.plot2d(xlim=200, power=1/3)"
    ]
   },
   {
@@ -91,7 +93,7 @@
     "plt.title('Wavefront with ripple error')\n",
     "\n",
     "ps = PSF.from_pupil(pupil3, efl=50, Q=3) # Q=2 now, we need high resolution\n",
-    "ps.plot2d(axlim=20, power=4)"
+    "ps.plot2d(xlim=20, power=1/4)"
    ]
   },
   {
@@ -114,16 +116,16 @@
     "    denominator = 2 * sigma ** 2\n",
     "    return amplitude * np.exp(-numerator / denominator)\n",
     "    \n",
-    "phase_mod2 = phase_mod * gauss_r(pupil.rho, center=0.66, sigma=0.02)\n",
+    "phase_mod2 = phase_mod * gauss_r(rho, center=0.66, sigma=0.02)\n",
     "phase_mod_vis = phase_mod2.copy()\n",
-    "phase_mod_vis[pupil._mask == 0] = np.nan\n",
+    "phase_mod_vis[pupil.transmission == 0] = np.nan\n",
     "plt.imshow(phase_mod_vis, cmap='inferno')\n",
     "\n",
     "pupil4 = pupil.copy()\n",
     "pupil4.phase += phase_mod2\n",
     "\n",
     "ps = PSF.from_pupil(pupil4, efl=50, Q=1.25) # Q=2 now, we need high resolution\n",
-    "ps.plot2d(axlim=200, power=3)"
+    "ps.plot2d(xlim=200, power=1/3)"
    ]
   },
   {
@@ -150,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
