update split transform mathod docs to current practices

--- a/docs/source/examples/Split Transform Method.ipynb
+++ b/docs/source/examples/Split Transform Method.ipynb
@@ -32,7 +32,7 @@
     "i = Interferogram.from_zygo_dat(p)\n",
     "i.crop().mask('circle', 40).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
-    "i.plot2d(clim=100, interp_method=None)  # verify the phase looks OK\n",
+    "i.plot2d(clim=100, interpolation=None)  # verify the phase looks OK\n",
     "plt.grid(False)"
    ]
   },
@@ -68,12 +68,12 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "i.plot_psd_slices(fig=fig, ax=ax, mode='period', xlim=(25, 0.25), lw=2)\n",
+    "i.psd().slices().plot('azavg', fig=fig, ax=ax, invert_x=True, xlim=(25, 0.25), lw=2)\n",
     "fig, ax = plt.subplots()\n",
     "# bicubic is highly recommended when the view is small with many pixels\n",
-    "psf.plot2d(axlim=psf.support / 2,\n",
-    "           clim=(1e-9,1e0),\n",
-    "           interp_method='bicubic',\n",
+    "psf.plot2d(xlim=psf.support / 2,\n",
+    "           clim=(1e-9,1e0), log=True,\n",
+    "           interpolation='bicubic',\n",
     "           fig=fig, ax=ax)\n",
     "plt.grid(False)"
    ]
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
