--- a/docs/source/examples/System Model.ipynb
+++ b/docs/source/examples/System Model.ipynb
@@ -39,8 +39,17 @@
     "\n",
     "# a circular aperture inscribed in a square 10mm on a side with 50mm EFL\n",
     "# note the default mask is a circle, so the kwarg is somewhat redundant here.\n",
-    "pupil = FringeZernike(coefficients, dia=10, mask='circle', opd_unit='um', norm=True)\n",
+    "pupil = FringeZernike(coefficients, dia=10, transmission='circle', z_unit='um', norm=True)\n",
     "psf = PSF.from_pupil(pupil, efl=40)  # F/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pupil.y"
    ]
   },
   {
@@ -58,11 +67,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = pupil.plot2d(interp_method='nearest')\n",
+    "fig, ax = pupil.plot2d(interpolation='nearest')\n",
     "ax.grid(False)\n",
     "ax.set_title('Wavefront')\n",
     "\n",
-    "fig, ax = psf.plot2d(axlim=20, power=2)  # 1/2 stretch, colorbar scales as well.\n",
+    "fig, ax = psf.plot2d(xlim=20, power=1/2)  # 1/2 stretch, colorbar scales as well.\n",
     "ax.grid(False)\n",
     "ax.set_title('PSF');"
    ]
@@ -81,7 +90,7 @@
    "outputs": [],
    "source": [
     "mtf = MTF.from_psf(psf)\n",
-    "mtf.plot_tan_sag(max_freq=200)"
+    "mtf.slices().plot(['x', 'y', 'azavg'], xlim=(0,200))"
    ]
   },
   {
@@ -109,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys_psf.show(xlim=20, interp_method='lanczos', power=2)  # sys_psf is a Convolvable, not a PSF.\n",
+    "sys_psf.plot2d(xlim=20, interpolation='lanczos', power=1/2)  # sys_psf is a Convolvable, not a PSF.\n",
     "plt.grid(False)"
    ]
   },
@@ -120,30 +129,16 @@
    "outputs": [],
    "source": [
     "sys_mtf = MTF.from_psf(sys_psf)\n",
-    "sys_mtf.plot_tan_sag(max_freq=200)"
+    "sys_mtf.slices().plot(['x', 'y', 'azavg'], xlim=(0,200))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see the system MTF reach zero at 200 cy/mm, as would be expected for a 5 micron pixel.  We also see the PSF is significantly squared off, since the pixel aperture contribution is larger than that of the optical system.  One might find the azimuthally averaged MTF to be more informative:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys_mtf.plot_azimuthal_average(max_freq=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For more information on the classes used, see [Zernikes](../user_guide/Zernikes.ipynb), [PSFs](../user_guide/PSFs.ipynb), [MTFs](../user_guide/MTFs.ipynb), and [PixelApertures, OLPFs, and convolutions](../user_guide/Convolvables.ipynb)"
+    "We see the system MTF reach zero at 200 cy/mm, as would be expected for a 5 micron pixel.  We also see the PSF is significantly squared off, since the pixel aperture contribution is larger than that of the optical system.\n",
+    "\n",
+    "For more information on the classes used, see [Zernikes](../user_guide/Zernikes.ipynb), [PSFs](../user_guide/PSFs.ipynb), [MTFs](../user_guide/MTFs.ipynb), and [PixelApertures, OLPFs, and convolutions.](../user_guide/Convolvables.ipynb)"
    ]
   }
  ],
@@ -163,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
